[package]
name = "js_binding"
version = "0.1.0"
authors = ["whaqzhzd <544430497@qq.com>"]
edition = "2018"

[dependencies]
# duktape引擎库
js_native = {path="../js_native",version ="0.1.0"}

# websocket网路库
ws = "0.8.0"

# 时间
chrono = "0.4.6"

# 日志库
log = "0.4.0"
env_logger = "0.6.1"

# 精确定时器
spin_sleep = "0.3.7"