[package]
name = "js_binding"
version = "0.1.0"
authors = ["whaqzhzd <544430497@qq.com>"]
edition = "2018"

[dependencies]
# duktape引擎库
js_native = {path="../js_native",version ="0.1.0"}

# websocket网路库
ws = "0.8.0"

# 时间
chrono = "0.4.6"

# 日志库
log = "0.4.0"
env_logger = "0.6.1"

# 静态全局
lazy_static = "1.3.0"

# 图形
gfx = "0.18"
glutin ="*"
gfx_window_glutin = "*"