[package]
name = "js_native"
version = "0.1.0"
authors = ["whaqzhzd <544430497@qq.com>"]
edition = "2018"

[dependencies]
dukbind = "^0.0.4"
typemap = "^0.3.3"
error-chain = "^0.12"
bitflags = "^1.0.4"
value = { git = "https://github.com/kildevaeld/value-rs", optional = true, features = ["datetime"] }